文章列表添加类型